More mobile spacing fixes

--- a/timer.css
+++ b/timer.css
@@ -600,10 +600,10 @@ button:hover {
   #sesname {width: 48vw;}
   #sescrip {width: 48vw;}
   #seesescrip {width: 58vw;}
-  #scrambletxt {top: 20vh; left: 37vw; width: 58vw; height: 38vh; overflow: scroll; -webkit-overflow-scrolling: touch;}
+  #scrambletxt {top: 20vh; left: 37vw; width: 58vw; height: 37vh; overflow: scroll; -webkit-overflow-scrolling: touch;}
   #settings {height: 20vh;}
-  #time {top: 52vh; height: 0;}
-  #insptime{top: 52vh; height: 0;}
+  #time {top: initial; bottom: 45vh; height: 0;}
+  #insptime{top: initial; bottom: 45vh; height: 0;}
   #timetable tbody {height: 50vh;}
   #centerac {height: 0;}
   #centerac {width: 74vw;}
